objects/rep_allocation__c.object
<CustomObject>
    <fields>
        <fullName>account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Rep Allocations</relationshipLabel>
        <relationshipName>Rep_Allocations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>incoterms__c</fullName>
        <label>Incoterms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>000</fullName>
                    <label>CPT, packaging included</label>
                </value>
                <value>
                    <fullName>001</fullName>
                    <label>EXW, packaging excluded</label>
                </value>
                <value>
                    <fullName>002</fullName>
                    <label>CFR, packaging included</label>
                </value>
                <value>
                    <fullName>003</fullName>
                    <label>EXW, packaging included</label>
                </value>
                <value>
                    <fullName>004</fullName>
                    <label>FOB, packaging excluded</label>
                </value>
                <value>
                    <fullName>005</fullName>
                    <label>CPT, packaging excluded</label>
                </value>
                <value>
                    <fullName>006</fullName>
                    <label>Special arangement in P.O.</label>
                </value>
                <value>
                    <fullName>007</fullName>
                    <label>as agreed</label>
                </value>
                <value>
                    <fullName>008</fullName>
                    <label>Special arangement, packaging included</label>
                </value>
                <value>
                    <fullName>009</fullName>
                    <label>Special arangement, packaging excluded</label>
                </value>
                <value>
                    <fullName>CFR</fullName>
                </value>
                <value>
                    <fullName>CIF</fullName>
                </value>
                <value>
                    <fullName>CIP</fullName>
                </value>
                <value>
                    <fullName>CPT</fullName>
                </value>
                <value>
                    <fullName>DAF</fullName>
                </value>
                <value>
                    <fullName>DAP</fullName>
                </value>
                <value>
                    <fullName>DDP</fullName>
                </value>
                <value>
                    <fullName>DDU</fullName>
                </value>
                <value>
                    <fullName>DEQ</fullName>
                </value>
                <value>
                    <fullName>DES</fullName>
                </value>
                <value>
                    <fullName>EXW</fullName>
                </value>
                <value>
                    <fullName>FAS</fullName>
                </value>
                <value>
                    <fullName>FCA</fullName>
                </value>
                <value>
                    <fullName>FH</fullName>
                </value>
                <value>
                    <fullName>FOB</fullName>
                </value>
                <value>
                    <fullName>UN</fullName>
                </value>
                <value>
                    <fullName>XXX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>line_of_business_and_roles__c</fullName>
        <label>Line of Business and Roles</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Diagnostic</fullName>
                </value>
                <value>
                    <fullName>Bradycardia</fullName>
                </value>
                <value>
                    <fullName>Tachycardia</fullName>
                </value>
                <value>
                    <fullName>Electrophysiology</fullName>
                </value>
                <value>
                    <fullName>Vascular Intervention</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>payment_terms__c</fullName>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0001</fullName>
                    <label>Payable immediately due net_</label>
                </value>
                <value>
                    <fullName>0002</fullName>
                    <label>14d/3% -30d/2% - 45d net</label>
                </value>
                <value>
                    <fullName>0003</fullName>
                    <label>14d/3% -30d/1,5% - 45d net bas</label>
                </value>
                <value>
                    <fullName>0004</fullName>
                    <label>14d/3% - 30d/1% - 60d net</label>
                </value>
                <value>
                    <fullName>0005</fullName>
                    <label>10d/2% - 30d/1% - 50d net</label>
                </value>
                <value>
                    <fullName>0006</fullName>
                    <label>mont end 4% - 15th next/2% - 1</label>
                </value>
                <value>
                    <fullName>0007</fullName>
                    <label>14d/4% - 30d/2% - 60d net</label>
                </value>
                <value>
                    <fullName>0008</fullName>
                    <label>immed. net due - based month e</label>
                </value>
                <value>
                    <fullName>0009</fullName>
                    <label>end of next month 2,125%</label>
                </value>
                <value>
                    <fullName>0011</fullName>
                    <label>within 10 days 3%</label>
                </value>
                <value>
                    <fullName>0014</fullName>
                    <label>within 10 days 5%</label>
                </value>
                <value>
                    <fullName>0015</fullName>
                    <label>10d/3% - 15d/2% - 20 days net</label>
                </value>
                <value>
                    <fullName>0016</fullName>
                    <label>14d/3% - 20d/2% - 30d net</label>
                </value>
                <value>
                    <fullName>IK00</fullName>
                    <label>Within 5 days 3% cash discount</label>
                </value>
                <value>
                    <fullName>LVT0</fullName>
                    <label>16 days 2%, 31 days net.</label>
                </value>
                <value>
                    <fullName>MVT0</fullName>
                    <label>10 days 3%, 16 2%, 31 net</label>
                </value>
                <value>
                    <fullName>WALL</fullName>
                    <label>99% forever</label>
                </value>
                <value>
                    <fullName>WL01</fullName>
                    <label>12 days net</label>
                </value>
                <value>
                    <fullName>Z002</fullName>
                    <label>Compensation</label>
                </value>
                <value>
                    <fullName>Z018</fullName>
                    <label>42 days 2% / 56 days due net</label>
                </value>
                <value>
                    <fullName>Z019</fullName>
                    <label>42 days 3% / 56 days due net</label>
                </value>
                <value>
                    <fullName>Z020</fullName>
                    <label>10 days due net</label>
                </value>
                <value>
                    <fullName>Z022</fullName>
                    <label>10 days 3% / 30 days due net</label>
                </value>
                <value>
                    <fullName>Z023</fullName>
                    <label>14 days 2% / 30 days due net</label>
                </value>
                <value>
                    <fullName>Z024</fullName>
                    <label>14 days 3% / 30 days due net</label>
                </value>
                <value>
                    <fullName>Z026</fullName>
                    <label>60 days due net</label>
                </value>
                <value>
                    <fullName>Z027</fullName>
                    <label>8 days 2% / 30 days due net</label>
                </value>
                <value>
                    <fullName>Z028</fullName>
                    <label>14 days due net</label>
                </value>
                <value>
                    <fullName>Z029</fullName>
                    <label>10 days 5% / 30 days due net</label>
                </value>
                <value>
                    <fullName>Z030</fullName>
                    <label>10 days 9% / 30 days due net</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>shipping_terms__c</fullName>
        <label>Shipping terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>00</fullName>
                    <label>Bill only</label>
                </value>
                <value>
                    <fullName>01</fullName>
                    <label>airfreight</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <label>airmail</label>
                </value>
                <value>
                    <fullName>04</fullName>
                    <label>by truck</label>
                </value>
                <value>
                    <fullName>05</fullName>
                    <label>free</label>
                </value>
                <value>
                    <fullName>06</fullName>
                    <label>handcarried</label>
                </value>
                <value>
                    <fullName>07</fullName>
                    <label>mail</label>
                </value>
                <value>
                    <fullName>09</fullName>
                    <label>collection</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>DHL Worldwi. Express</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>FedEx</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>Flying Wheels</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <label>German Parcel</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <label>ICE-courier</label>
                </value>
                <value>
                    <fullName>16</fullName>
                    <label>Kühne &amp; Nagel</label>
                </value>
                <value>
                    <fullName>17</fullName>
                    <label>NET express (night)</label>
                </value>
                <value>
                    <fullName>18</fullName>
                    <label>NET (Saturday)</label>
                </value>
                <value>
                    <fullName>19</fullName>
                    <label>NET express (day)</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <label>P.C. Airline Service</label>
                </value>
                <value>
                    <fullName>21</fullName>
                    <label>Panalpina</label>
                </value>
                <value>
                    <fullName>22</fullName>
                    <label>Spedition Birkart</label>
                </value>
                <value>
                    <fullName>23</fullName>
                    <label>TNT Express</label>
                </value>
                <value>
                    <fullName>24</fullName>
                    <label>TNT Express 9:00 am.</label>
                </value>
                <value>
                    <fullName>25</fullName>
                    <label>UPS</label>
                </value>
                <value>
                    <fullName>26</fullName>
                    <label>storage 50</label>
                </value>
                <value>
                    <fullName>27</fullName>
                    <label>storage IK</label>
                </value>
                <value>
                    <fullName>28</fullName>
                    <label>at sales dept Berlin</label>
                </value>
                <value>
                    <fullName>29</fullName>
                    <label>courier/airfreight</label>
                </value>
                <value>
                    <fullName>30</fullName>
                    <label>DA / Ms. Brown</label>
                </value>
                <value>
                    <fullName>31</fullName>
                    <label>Metzger &amp; Richner</label>
                </value>
                <value>
                    <fullName>32</fullName>
                    <label>free/cheapest</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>user__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Rep_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Rep Allocation</label>
    <nameField>
        <label>Rep Allocation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rep Allocations</pluralLabel>
    <recordTypes>
        <fullName>rep_allocation</fullName>
        <active>true</active>
        <label>Rep Allocation</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>